LendersApp/src/objects/VBUDefaultFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Default list of filters for Verification  bulk update</description>
    <fields>
        <fullName>AssigntoMe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean value of AssigntoMe filter for Verification bulk update.</description>
        <label>AssigntoMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StageFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VBU Default Filters for stage</description>
        <label>StageFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusFilter__c</fullName>
        <description>VBU Default Filters for status</description>
        <label>StatusFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VBU Default Filters</label>
</CustomObject>